Fix Nixpacks npm install command

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs_20", "chromium", "postgresql"]
 
 [phases.install]
-cmds = ["npm ci --only=production"]
+cmds = ["npm install --omit=dev"]
 
 [phases.build]
 cmds = ["echo 'Build complete'"]
